--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.0",
+    "@tanstack/react-query": "^4.40.1",
+    "@tanstack/react-query-devtools": "^4.40.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -18,6 +21,7 @@
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.39.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
